--- a/picker/src/main/resources/application.properties
+++ b/picker/src/main/resources/application.properties
@@ -3,3 +3,8 @@ server.port=8082
 logging.level.root=info
 
 #server.servlet.context-path=/picker
+
+
+spring.datasource.url=jdbc:mysql://localhost:3306/picker
+spring.datasource.username=root
+spring.datasource.password=root
