--- a/picker/src/main/resources/application.properties
+++ b/picker/src/main/resources/application.properties
@@ -5,6 +5,11 @@ logging.level.root=info
 #server.servlet.context-path=/picker
 
 
-spring.datasource.url=jdbc:mysql://localhost:3306/picker
-spring.datasource.username=root
-spring.datasource.password=root
+#spring.datasource.url=jdbc:mysql://localhost:3306/picker
+#spring.datasource.username=root
+#spring.datasource.password=root
+
+
+spring.datasource.url=jdbc:mysql://192.168.70.184:3306/picker
+spring.datasource.username=hkadmin
+spring.datasource.password=admin2K11!
